@@ -75,7 +75,7 @@ extern long conf_lineno;
 %token TSUMMARIZECHANGES
 %token TNEWLINE
 %token TVERBOSE
-%token TDETAILEDINITREPORT
+%token TREPORTDETAILEDINIT
 %token TREPORTBASE16
 %token TCONFIG_FILE
 %token TDATABASE
@@ -152,7 +152,7 @@ lines : lines line | ;
 
 line : rule | equrule | negrule | definestmt | undefstmt
        | ifdefstmt | ifndefstmt | ifhoststmt | ifnhoststmt
-       | groupdef | db_in | db_out | db_new | verbose | detailed_init_report | config_version
+       | groupdef | db_in | db_out | db_new | verbose | report_detailed_init | config_version
        | report | gzipdbout | root_prefix | report_base16 | recursion_stopper | warn_dead_symlinks | grouped
        | summarize_changes | acl_no_symlink_follow | beginconfigstmt | endconfigstmt
        | TEOF {
@@ -303,12 +303,12 @@ warn_dead_symlinks : TWARNDEADSYMLINKS TFALSE {
   conf->warn_dead_symlinks=0;
 } ;
 
-detailed_init_report : TDETAILEDINITREPORT TTRUE {
-  conf->detailed_init_report=1;
+report_detailed_init : TREPORTDETAILEDINIT TTRUE {
+  conf->report_detailed_init=1;
 } ;
 
-detailed_init_report : TDETAILEDINITREPORT TFALSE {
-  conf->detailed_init_report=0;
+report_detailed_init : TREPORTDETAILEDINIT TFALSE {
+  conf->report_detailed_init=0;
 } ;
 
 report_base16 : TREPORTBASE16 TTRUE {
