@@ -2,7 +2,7 @@ Version 0.16 (NOT_YET_RELEASED)
 	* Enabled summarize_changes by default
 	* Compare database entries just once
 	* Added new root_prefix option
-	* Added new detailed_init_report option
+	* Added new report_detailed_init option
 	* Added new report_base16 option
 	* Wrap attribute values instead of cut them off
 	* Side-by-side output of acl and xattrs values
